--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mysql": "^2.15.0"
+    "multer": "^1.3.1",
+    "mysql": "^2.16.0"
   }
 }
